2008-09-02  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-request.c (imsettings_request_get_info_object):
	Use current locale if no locale is set.

	* utils/imsettings-info.c (main): set a locale to get the locale.

	* src/factory_info.c (imsettings_info_manager_real_get_info): 
	try to update the info for XIM if no info is in the hash.

	* imsettings/imsettings.h (IMSETTINGS_IMINFO_DAEMON_VERSION): 
	bump a version.

	* imsettings/imsettings-observer.c (imsettings_get_info_object): 
	interface has been changed.

	* imsettings/imsettings.xml (GetInfoObject): Add a langauge.

	* applet/main.c: ifdef'd a value.

	* utils/imsettings-info.c (main): set the language to query
	the info. (Issue#16)

	* applet/Makefile.am (INCLUDES): Fix a build stop due to the lack of
	the proper options.

2008-09-01  Akira TAGOH  <tagoh@redhat.com>

	* applet/imsettings-applet.desktop.in.in (Icon): Get rid of
	the extension. (rhbz#460695)

2008-08-29  Akira TAGOH  <tagoh@redhat.com>

	* applet/main.c (_activate): Fix a typo.

	* applet/main.c (_setup_acceleration_key): new.
	(_get_acceleration_key): new.
	(_preference_update_entry): new.
	(_preference_grabbed): new.
	(_preference_grabkey): new.
	(_preference_closed): new.
	(_preference_activated): new.
	(_create_applet): disable the acceleration key feature temporarily.
	this isn't well tested.

2008-08-28  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_destroy_ic): 
	send XIM_DESTROY_IC instead of relying on the default behavior when
	unable to get imid.

	* src/factory.c (imsettings_manager_real_start_im): send "Changed"
	signal.
	(imsettings_manager_real_stop_im): likewise.

	* imsettings/imsettings-request.c (imsettings_request_send_signal_changed):
	new.

	* applet/main.c (_activate): show a notice if no default IM is setup.
	(imsettings_xim_message_filter): Update the icon when any changes made
	externally.

	* applet/radiomenuitem.c: the code cleanup.
